Separando a record-api e tratando o sigilo
